<?xml version="1.0" encoding="utf-8"?>
<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFF"
    tools:context=".SelectUserActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/happy_pet_logo"/>

            <TextView

                android:text="@string/hello_welcome_to_this_application"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView

                android:text="@string/what_best_describes_you"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/pet_owner_login_act_btn"
                    android:text="@string/pet_owner"
                    android:textAllCaps="false"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/buttons_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/vet_login_act_btn"
                    android:text="@string/veterinarian"
                    android:textAllCaps="false"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/buttons_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/pharmacist_login_act_btn"
                    android:text="@string/pharmacist"
                    android:textAllCaps="false"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/buttons_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/driver_login_act_btn"
                    android:text="@string/driver"
                    android:textAllCaps="false"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/buttons_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



            </LinearLayout>


        </LinearLayout>


</ScrollView>