<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".PetOwnerLoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/pet_owner_logo"
            android:id="@+id/pet_owner_logo"
            android:src="@drawable/pet_owner_logo"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"/>

        <TextView
            android:id="@+id/pet_owner_title"
            android:text="@string/welcome_pet_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="5dp"/>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:hintTextAppearance="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pet_ownerLoginEmail"
                    android:hint="@string/enter_your_email"
                    android:drawableStart="@drawable/ic_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textColorHint="#000">

                </com.google.android.material.textfield.TextInputEditText>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#000"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:hintTextAppearance="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pet_ownerLoginPassword"
                    android:hint="@string/enter_your_password"
                    android:drawableStart="@drawable/ic_lock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textColorHint="#000"
                    android:layout_marginTop="20dp">


                </com.google.android.material.textfield.TextInputEditText>



            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/pet_ownerForgotPassword"
                android:text="@string/forgot_password"
                android:textColor="#000"
                android:gravity="end"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/pet_ownerLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:background="@drawable/buttons_background"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/pet_ownerRegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_register"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:gravity="center"/>


        </LinearLayout>



    </LinearLayout>




</ScrollView>