<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFF"
    tools:context=".RegisterVetActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/happy_pet_logo"/>

        <TextView

            android:text="@string/ui_title"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/vet_profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/person"
                app:civ_border_width="2dp"
                android:layout_gravity="center"
                app:civ_border_color="#FF000000"/>


            <TextView
                android:text="Add photo"
                android:gravity="center"

                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driverFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_profile">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driverNicNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nic_hint"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_nic">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driverPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:inputType="number"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_phone">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driverEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_mail">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/driverPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:drawablePadding="10dp"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textColorHint="#000"
                    android:drawableStart="@drawable/ic_password">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/driverRegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register Now"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:background="@drawable/buttons_background"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_registered_login"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:gravity="center"/>


        </LinearLayout>


    </LinearLayout>


</ScrollView>