<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".VetLoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="694dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            app:srcCompat="@drawable/pet_pharmacy_logo" />

        <TextView
            android:id="@+id/vet_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/welcome_pharmacists"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pharmacistLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pharmacistLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp">


                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/pharmacistLogin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/buttons_background"
                android:text="@string/vet_login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />


        </LinearLayout>

        <TextView
            android:id="@+id/pharmacistRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>




</LinearLayout>